# metaphaze

./: .gitignore  Cargo.toml  README.md  demo.tape
.design/: CHANGELOG.md
.design/branding/metaphaze/: BRIEF.md  ROADMAP.md  STATE.md  config.json
.design/branding/metaphaze/discover/: INDEX.md  competitive-audit.md  market-landscape.md  mood-board-direction.md  trend-analysis.md
.design/branding/metaphaze/identity/: INDEX.md  brand-applications.md  color-system.md  imagery-style.md  logo-directions.md  palettes.json  typography.md
.design/branding/metaphaze/patterns/: INDEX.md  STYLE.md  guidelines.html  metaphaze.yml
.design/branding/metaphaze/strategy/: INDEX.md  archetype.md  brand-platform.md  messaging.md  positioning.md  voice-and-tone.md
.design/projects/landing-page/: BRIEF.md  STATE.md  brand.ref  config.json
.design/projects/landing-page/brief/: INDEX.md  gap-analysis.md  install-manifest.md  scope.md  target-adaptations.md
.design/projects/landing-page/critique/: INDEX.md  accessibility-audit.md  accessibility-fixes.md  critique.md  (+3 more)
.github/workflows/: release.yml
prompts/: discuss.md  execute_step.md  execute_task.md  plan_milestone.md  plan_phase.md  plan_roadmap.md  plan_slice.md  plan_track.md  summarize.md  verify_slice.md  verify_step.md  verify_task.md  verify_track.md
public/vhs/: demo-desktop.webm
src/: budget.rs  claude.rs  config.rs  diagnostics.rs  discuss.rs  events.rs  executor.rs  git.rs  main.rs  planner.rs  prompt.rs  run_record.rs  scheduler.rs  shell.rs  state.rs  step_context.rs  stream.rs  tui.rs  verifier.rs
(+28 files in other folders)
