[package]
name = "metaphaze"
version = "0.1.0"
edition = "2021"
description = "A spec-driven context engine for Claude Code"
license = "MIT"

[[bin]]
name = "mz"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dialoguer = "0.11"
regex = "1"
